# tiny-math

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_check_for_square_matrix.py  test_linear_algebra.py
tiny-math/: __init__.py  linear-algebra.py
tiny_math/: __init__.py  linear_algebra.py
tiny_math.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
