[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-math"
version = "0.1.0"
description = "An open-source Python package"
authors = [
    {name = "Vu Duc Tung", email = "tungvuduc@outlook.de"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "bioinformatics",
    "software", 
    "AlphaPept ecosystem"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

# Main dependencies
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.12.0",
    "pyteomics>=4.6.0",      # MS data handling
    "h5py>=3.10.0",          # HDF5 file format
    "alpharaw>=0.4.0",       # Raw MS data
    "directlfq>=0.3.0",      # LFQ quantification
    "numba",         # JIT compilation
    "joblib>=1.3.0",         # Parallel processing
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "click>=8.0.1",          # Command line interface
    "tqdm>=4.66.0",          # Progress bars
    "pyarrow>=20.0.0",       # Parquet files
    "openpyxl>=3.1.0",       # Excel files
    "scikit-learn>=1.3.0",
    "torch>=2.2.0",          # Deep learning
    "pyyaml>=6.0.0",         # YAML config files
]

[project.urls]
Homepage = "https://github.com/MannLabs/tiny-math"
GitHub = "https://github.com/MannLabs/tiny-math"
PyPI = "https://pypi.org/project/tiny-math/"

 

[project.optional-dependencies]
# Development tools only - not main dependencies!
development = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    
    # Code quality
    "ruff>=0.11.0",
    "pre-commit>=3.8.0",
    
    # Documentation
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.2.0",
    
    # Version management
    "bump-my-version>=0.10.0",
    
    # Building/Publishing
    "build>=1.3.0",
    "twine>=4.0.0",
    
    # Notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]

# Stable versions with exact pins
stable = [
    "numpy==1.26.0",
    "pandas==2.1.0",
    "scipy==1.12.0",
    "pyteomics==4.6.0",
    "h5py==3.10.0",
    "alpharaw==0.4.0",
    "directlfq==0.3.0",
    "numba",
    "joblib==1.3.0",
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
    "plotly==5.18.0",
    "click==8.0.1",
    "tqdm==4.66.0",
    "pyarrow==20.0.0",
    "openpyxl==3.1.0",
    "scikit-learn==1.3.0",
    "torch==2.2.0",
    "pyyaml==6.0.0",
]

[tool.setuptools]
packages = ["tiny_math"]
include-package-data = true

[tool.setuptools.package-data]
# Include all non-Python files in the package
tiny_math = ["*.yaml", "*.yml", "*.json", "*.txt", "*.png"]